--- a/main.html
+++ b/main.html
@@ -4,18 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dummy Site</title>
+    <title>Playground</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Welcome to my Dummy Site</h1>
+    <h1>Welcome to my Playground</h1>
     <p>Here is your user page</p>
 
     <ul class="todo-list">
-        <li></li>
     </ul>
-
+    <input type="text" id="todoInput" placeholder="Enter a new task">
     <button id="todoButton">Add a Task</button>
 
     <script src="index.js"></script>
